--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
 
     <string name="app_name">Pocket JW</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_welcome">WelcomeActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_guide">GuideActivity</string>
 
 </resources>
