--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="title_activity_welcome">WelcomeActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_guide">GuideActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 
 </resources>
