--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_guide">教程</string>
     <string name="title_activity_login">登陆</string>
+    <string name="usernameHint">用户名</string>
+    <string name="passwordHint">密码</string>
+    <string name="login">登陆</string>
 
 </resources>
