--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="passwordHint">密码</string>
     <string name="login">登陆</string>
     <string name="loginNews">没有帐号，查看新闻。</string>
+    <string name="title_activity_news">书院新闻</string>
 
 </resources>
