--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_welcome">掌上敬文</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_guide">教程</string>
+    <string name="title_activity_guide">引导</string>
     <string name="title_activity_login">登陆</string>
     <string name="usernameHint">用户名</string>
     <string name="passwordHint">密码</string>
