--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="login">登陆</string>
     <string name="loginNews">没有帐号，查看新闻。</string>
     <string name="title_activity_news">书院新闻</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
