--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -21,9 +21,10 @@
     <string name="title_activity_news_item">书院新闻</string>
     <string name="action_share">分享</string>
     <string name="hello_world">Hello world!</string>
-    <string name="news">书院新闻</string>
+    <string name="notice">通知发文</string>
     <string name="problems">你问我答</string>
     <string name="more">更多</string>
+    <string name="more_news">书院新闻</string>
     <string name="more_contact">通讯录</string>
     <string name="more_logout">退出登陆</string>
     <string name="title_activity_contact">通讯录</string>
