--- a/PocketJW/app/src/main/res/values/strings.xml
+++ b/PocketJW/app/src/main/res/values/strings.xml
@@ -26,10 +26,22 @@
     <string name="more">更多</string>
     <string name="more_news">书院新闻</string>
     <string name="more_contact">通讯录</string>
+    <string name="more_setting">个性设置</string>
+    <string name="more_profile">个人资料</string>
     <string name="more_logout">退出登陆</string>
     <string name="title_activity_contact">通讯录</string>
     <string name="title_activity_contact_item">通讯录</string>
     <string name="contact_export">导出联系人</string>
     <string name="action_problem_add">添加问题</string>
+    <string name="action_notice_add">新建发文</string>
+    <string name="title_activity_profile">个人资料</string>
+    <string name="title_activity_setting">个性设置</string>
+    <string name="reset_password">修改密码</string>
+    <string name="profile_name_hint">真实姓名</string>
+    <string name="title_activity_change_password">修改密码</string>
+    <string name="old_password">旧密码</string>
+    <string name="new_password">新密码</string>
+    <string name="sync_local_phone_number">同步本机号码</string>
+    <string name="profile_phone_hint">联系方式（单击图标同步本机号码）</string>
 
 </resources>
